News model and functionalities
